--- a/index.html
+++ b/index.html
@@ -1,39 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hotel Booking</title>
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-
-</head>
-<body>
+<html>
+  <head>
+    <title>Hospitality App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  </head>
+  <body>
     <div class="container">
-  <h1>Welcome!!!</h1>
-  <div id="error" class="alert alert-danger" style="display:none;"></div>
-  <form>
-    <div class="form-group">
-      <label for="name">Name</label>
-      <input type="text" class="form-control" id="name" name="name">
-      <span id="name-error" class="text-danger" style="display:none;">Please enter your name.</span>
+      <h1>Hospitality App</h1>
+      <h2>List of Hotels</h2>
+      <div id="hotels"></div>
+      <h2>Add a New Hotel</h2>
+      <form id="hotel-form">
+        <div class="form-group">
+          <label for="name">Name:</label>
+          <input type="text" class="form-control" id="name" name="name" required>
+        </div>
+        <div class="form-group">
+          <label for="address">Address:</label>
+          <input type="text" class="form-control" id="address" name="address" required>
+        </div>
+        <div class="form-group">
+          <label for="stars">Stars:</label>
+          <input type="number" class="form-control" id="stars" name="stars" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Add Hotel</button>
+      </form>
     </div>
-    <div class="form-group">
-      <label for="email">Email address</label>
-      <input type="email" class="form-control" id="email" name="email">
-      <span id="email-error" class="text-danger" style="display:none;">Please enter a valid email address.</span>
-    </div>
-    <div class="form-group">
-      <label for="message">Message</label>
-      <textarea class="form-control" id="message" name="message" rows="3"></textarea>
-      <span id="message-error" class="text-danger" style="display:none;">Please enter a message.</span>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
-  <hr>
-  <div id="loader" style="display:none;"><i class="fa fa-spinner fa-spin"></i> Loading...</div>
-  <div id="data"></div>
-</div>
-
-</body>
-</html>
+  </body>
+  </html>
+  
